# kde-klipper-history-extractor

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
